--- a/WorldOfTheThreeKingdomsEditor/NewEventWindow.xaml
+++ b/WorldOfTheThreeKingdomsEditor/NewEventWindow.xaml
@@ -86,7 +86,7 @@
         <TextBox x:Name="tbImage" Height="23" Margin="909,45,10,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top"/>
         <Button Content="選擇音效" x:Name="btnSound" Click="BtnSound_Click" HorizontalAlignment="Left" Margin="829,74,0,0" VerticalAlignment="Top" Width="75"/>
         <TextBox x:Name="tbSound" Height="23" Margin="909,74,10,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top"/>
-        <Button Content="選擇建築" x:Name="btnArchitecture" HorizontalAlignment="Left" Margin="829,113,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="選擇建築" x:Name="btnArchitecture" Click="BtnArchitecture_Click" HorizontalAlignment="Left" Margin="829,113,0,0" VerticalAlignment="Top" Width="75"/>
         <Label Content="" x:Name="lblArchitcture" Margin="904,110,10,0" VerticalAlignment="Top"/>
         <Button Content="建築條件" x:Name="btnArchitectureCond" HorizontalAlignment="Left" Margin="829,138,0,0" VerticalAlignment="Top" Width="75"/>
         <Label Content="" x:Name="lblArchitctureCond" Margin="904,135,10,0" VerticalAlignment="Top"/>
