--- a/WorldOfTheThreeKingdomsEditor/MainWindow.xaml
+++ b/WorldOfTheThreeKingdomsEditor/MainWindow.xaml
@@ -208,38 +208,43 @@
                 </Grid>
             </TabItem>
             <!-- common -->
-            <TabItem Header="称号">
+            <TabItem Header="称号" Background="AliceBlue" FontWeight="Light">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgTitle" CellStyle="{DynamicResource DataGridCellStyle1}" ContextMenu="{StaticResource dgNomalMenu}" MouseLeftButtonUp="Dg_Selected" MouseRightButtonUp="Dg_Selected" MouseDoubleClick="DgNomal_MouseDoubleClick" />
                 </Grid>
             </TabItem>
-            <TabItem Header="称号种类">
+            <TabItem Header="称号种类" Background="AliceBlue" FontWeight="Light">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgTitleKind" CellStyle="{DynamicResource DataGridCellStyle1}" ContextMenu="{StaticResource dgNomalMenu}" MouseLeftButtonUp="Dg_Selected" MouseRightButtonUp="Dg_Selected" MouseDoubleClick="DgNomal_MouseDoubleClick" />
                 </Grid>
             </TabItem>
-            <TabItem Header="技能">
+            <TabItem Header="技能" Background="AliceBlue" FontWeight="Light">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgSkill" CellStyle="{DynamicResource DataGridCellStyle1}" ContextMenu="{StaticResource dgNomalMenu}" MouseLeftButtonUp="Dg_Selected" MouseRightButtonUp="Dg_Selected" MouseDoubleClick="DgNomal_MouseDoubleClick" />
                 </Grid>
             </TabItem>
-            <TabItem Header="特技">
+            <TabItem Header="特技" Background="AliceBlue" FontWeight="Light">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgStunt" CellStyle="{DynamicResource DataGridCellStyle1}" ContextMenu="{StaticResource dgNomalMenu}" MouseLeftButtonUp="Dg_Selected" MouseRightButtonUp="Dg_Selected" MouseDoubleClick="DgNomal_MouseDoubleClick" />
                 </Grid>
             </TabItem>
-            <TabItem Header="战法">
+            <TabItem Header="战法" Background="AliceBlue" FontWeight="Light">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgCombatMethod" CellStyle="{DynamicResource DataGridCellStyle1}" ContextMenu="{StaticResource dgNomalMenu}" MouseLeftButtonUp="Dg_Selected" MouseRightButtonUp="Dg_Selected" MouseDoubleClick="DgNomal_MouseDoubleClick" />
                 </Grid>
             </TabItem>
-            <TabItem Header="人物个性语言">
+            <TabItem Header="计略" Background="AliceBlue" FontWeight="Light">
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid x:Name="dgStratagem" CellStyle="{DynamicResource DataGridCellStyle1}" ContextMenu="{StaticResource dgNomalMenu}" MouseLeftButtonUp="Dg_Selected" MouseRightButtonUp="Dg_Selected" MouseDoubleClick="DgNomal_MouseDoubleClick" />
+                </Grid>
+            </TabItem>
+            <TabItem Header="人物个性语言" Background="AliceBlue" FontWeight="Light">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgTextMessageKind"  CellStyle="{DynamicResource DataGridCellStyle1}" ContextMenu="{StaticResource dgNomalMenu}" MouseLeftButtonUp="Dg_Selected" MouseRightButtonUp="Dg_Selected" MouseDoubleClick="DgNomal_MouseDoubleClick"  IsReadOnly="True" HorizontalAlignment="Left"  ColumnWidth="*" Width="200"/>
                     <DataGrid x:Name="dgTextMessage" CellStyle="{DynamicResource DataGridCellStyle1}" ContextMenu="{StaticResource dgNomalMenu}" MouseLeftButtonUp="Dg_Selected" MouseRightButtonUp="Dg_Selected" MouseDoubleClick="DgNomal_MouseDoubleClick"  Margin="250,0,0,0"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="影响">
+            <TabItem Header="影响" Background="AliceBlue" FontWeight="Light">
                 <Grid Background="#FFE5E5E5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" MaxWidth="750"/>
@@ -255,7 +260,7 @@
                     <DataGrid x:Name="dgInflunceKind"  CellStyle="{DynamicResource DataGridCellStyle1}" CanUserAddRows="False" CanUserDeleteRows="False"/>
                 </Grid>
             </TabItem>-->
-            <TabItem Header="条件">
+            <TabItem Header="条件" Background="AliceBlue" FontWeight="Light">
                 <Grid Background="#FFE5E5E5">
                     <Label Content="条件种类" Height="30" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="13" HorizontalContentAlignment="Center" Margin="115,0,0,0"></Label>
                     <DataGrid x:Name="dgConditionKind" CellStyle="{DynamicResource DataGridCellStyle1}" ContextMenu="{StaticResource dgNomalMenu}" MouseLeftButtonUp="Dg_Selected" MouseRightButtonUp="Dg_Selected" MouseDoubleClick="DgNomal_MouseDoubleClick"  CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" HorizontalAlignment="Left"  ColumnWidth="*" Width="330" Margin="0,30,0,0"/>
@@ -267,7 +272,7 @@
                     <DataGrid x:Name="dgConditionKind"  CellStyle="{DynamicResource DataGridCellStyle1}" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True"/>
                 </Grid>
             </TabItem>-->
-            <TabItem Header="事件影响">
+            <TabItem Header="事件影响" Background="AliceBlue" FontWeight="Light">
                 <Grid Background="#FFE5E5E5">
                     <Label Content="事件影响种类" Height="30" Width="100" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="13" HorizontalContentAlignment="Center" Margin="115,0,0,0"></Label>
                     <DataGrid x:Name="dgEventEffectKind" CellStyle="{DynamicResource DataGridCellStyle1}" ContextMenu="{StaticResource dgNomalMenu}" MouseLeftButtonUp="Dg_Selected" MouseRightButtonUp="Dg_Selected" MouseDoubleClick="DgNomal_MouseDoubleClick" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" HorizontalAlignment="Left"  ColumnWidth="*" Width="330"  Margin="0,30,0,0"/>
@@ -279,7 +284,7 @@
                     <DataGrid x:Name="dgEventEffectKind"  CellStyle="{DynamicResource DataGridCellStyle1}" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True"/>
                 </Grid>
             </TabItem>-->
-            <TabItem Header="部队事件影响">
+            <TabItem Header="部队事件影响" Background="AliceBlue" FontWeight="Light">
                 <Grid Background="#FFE5E5E5">
                     <Label Content="部队事件影响种类" Height="30" Width="120" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="13" HorizontalContentAlignment="Center" Margin="105,0,0,0"></Label>
                     <DataGrid x:Name="dgTroopEventEffectKind" CellStyle="{DynamicResource DataGridCellStyle1}" ContextMenu="{StaticResource dgNomalMenu}" MouseLeftButtonUp="Dg_Selected" MouseRightButtonUp="Dg_Selected" MouseDoubleClick="DgNomal_MouseDoubleClick" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" HorizontalAlignment="Left"  ColumnWidth="*" Width="330" Margin="0,30,0,0"/>
@@ -291,32 +296,32 @@
                     <DataGrid x:Name="dgTroopEventEffectKind"  CellStyle="{DynamicResource DataGridCellStyle1}" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True"/>
                 </Grid>
             </TabItem>-->
-            <TabItem Header="设施类">
+            <TabItem Header="设施类" Background="AliceBlue" FontWeight="Light">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgFacilityKind" CellStyle="{DynamicResource DataGridCellStyle1}" ContextMenu="{StaticResource dgNomalMenu}" MouseLeftButtonUp="Dg_Selected" MouseRightButtonUp="Dg_Selected" MouseDoubleClick="DgNomal_MouseDoubleClick" />
                 </Grid>
             </TabItem>
-            <TabItem Header="建筑类">
+            <TabItem Header="建筑类" Background="AliceBlue" FontWeight="Light">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgArchitectureKind" CellStyle="{DynamicResource DataGridCellStyle1}" ContextMenu="{StaticResource dgNomalMenu}" MouseLeftButtonUp="Dg_Selected" MouseRightButtonUp="Dg_Selected" MouseDoubleClick="DgNomal_MouseDoubleClick" />
                 </Grid>
             </TabItem>
-            <TabItem Header="兵种类">
+            <TabItem Header="兵种类" Background="AliceBlue" FontWeight="Light">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgMilitaryKind" CellStyle="{DynamicResource DataGridCellStyle1}" ContextMenu="{StaticResource dgNomalMenu}" MouseLeftButtonUp="Dg_Selected" MouseRightButtonUp="Dg_Selected" MouseDoubleClick="DgNomal_MouseDoubleClick" />
                 </Grid>
             </TabItem>
-            <TabItem Header="技巧类">
+            <TabItem Header="技巧类" Background="AliceBlue" FontWeight="Light">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgTechniques" CellStyle="{DynamicResource DataGridCellStyle1}" ContextMenu="{StaticResource dgNomalMenu}" MouseLeftButtonUp="Dg_Selected" MouseRightButtonUp="Dg_Selected" MouseDoubleClick="DgNomal_MouseDoubleClick" />
                 </Grid>
             </TabItem>
-            <TabItem Header="官爵类">
+            <TabItem Header="官爵类" Background="AliceBlue" FontWeight="Light">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgGuanjue" CellStyle="{DynamicResource DataGridCellStyle1}" ContextMenu="{StaticResource dgNomalMenu}" MouseLeftButtonUp="Dg_Selected" MouseRightButtonUp="Dg_Selected" MouseDoubleClick="DgNomal_MouseDoubleClick" />
                 </Grid>
             </TabItem>
-            <TabItem Header="地形类">
+            <TabItem Header="地形类" Background="AliceBlue" FontWeight="Light">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dgTerrainDetail" CanUserAddRows="False" CanUserDeleteRows="False"  CellStyle="{DynamicResource DataGridCellStyle1}" ContextMenu="{StaticResource dgNomalMenu}" MouseLeftButtonUp="Dg_Selected" MouseRightButtonUp="Dg_Selected" MouseDoubleClick="DgNomal_MouseDoubleClick" />
                 </Grid>
